# ai_code

./: .gitignore  README.md  project.specs.txt  pyproject.toml
aicode/: __init__.py  cli.py  config.py  diff_patch.py  filesystem.py  graph.py  llm.py  prompts.py  security.py  shell.py  state.py  tools.py  ui.py  workspace.py
aicode_workspace/a-complete-flask-rest-app-for/: test_app.py
aicode_workspace/a-complete-flask-rest-app-for/.aicode/: state.json
aicode_workspace/a-complete-flask-rest-app-for/tests/: test_app.py
aicode_workspace/a-simple-calculator-app-with-a/.aicode/: state.json
aicode_workspace/a-simple-counter-app-with-+-an/: app.py
aicode_workspace/a-simple-counter-app-with-+-an/.aicode/: state.json
aicode_workspace/build-a-simple-to-do-using-fla/.aicode/: state.json
aicode_workspace/calc-test/.aicode/: state.json
aicode_workspace/calc/.aicode/: state.json
aicode_workspace/calc2/.aicode/: state.json
aicode_workspace/calculator-test2/.aicode/: state.json
aicode_workspace/calculator/.aicode/: state.json
aicode_workspace/clock/.aicode/: state.json
aicode_workspace/to-do/.aicode/: state.json
aicode_workspace/todo-app-3/.aicode/: state.json
aicode_workspace/todo2/.aicode/: state.json
